--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "validator": "^13.15.20"
   }
 }
